[gd_scene load_steps=12 format=3 uid="uid://ctu8173bndnaa"]

[ext_resource type="Script" path="res://player/player.gd" id="1_bs6cq"]
[ext_resource type="PackedScene" uid="uid://c0x41qs4nxj21" path="res://player/bubblegun/gun/bubble_gun.tscn" id="3_f2s2k"]
[ext_resource type="Script" path="res://player/timers.gd" id="4_p2arb"]
[ext_resource type="Texture2D" uid="uid://dqdepma1jrtyl" path="res://assets/player/Sprite idle.png" id="5_pvg50"]
[ext_resource type="Texture2D" uid="uid://cqd6ntswfy4fx" path="res://assets/player/Andar1.png" id="6_4wawn"]
[ext_resource type="Texture2D" uid="uid://bww8l8welvbyc" path="res://assets/player/Andar2.png" id="7_5aasu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t3ifh"]
atlas = ExtResource("5_pvg50")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awsto"]
atlas = ExtResource("6_4wawn")
region = Rect2(6, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt4w8"]
atlas = ExtResource("7_5aasu")
region = Rect2(6, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mqfeo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3ifh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awsto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt4w8")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ksuj"]
size = Vector2(43, 52)

[node name="Player" type="CharacterBody2D"]
collision_layer = 11
collision_mask = 3
script = ExtResource("1_bs6cq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mqfeo")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.151887

[node name="BubbleGun" parent="AnimatedSprite2D" instance=ExtResource("3_f2s2k")]
position = Vector2(31, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 6)
shape = SubResource("RectangleShape2D_3ksuj")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 350
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="PlayerTimer" type="Node" parent="."]
script = ExtResource("4_p2arb")

[node name="dash" type="Timer" parent="PlayerTimer"]
wait_time = 0.3
one_shot = true

[node name="delay_dmg" type="Timer" parent="PlayerTimer"]
wait_time = 0.5
one_shot = true

[node name="knockback" type="Timer" parent="PlayerTimer"]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="PlayerTimer/dash" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="PlayerTimer/delay_dmg" to="." method="_on_delay_dmg_timeout"]
[connection signal="timeout" from="PlayerTimer/knockback" to="." method="_on_knockback_timeout"]
